# decimalfp-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: actions.yml
decimalfp/: Cargo.toml
decimalfp/src/: lib.rs
decimalfp/tests/: decimal128.rs  decimal32.rs  decimal64.rs  tests.rs
decimalfp_macros_support/: Cargo.toml
decimalfp_macros_support/src/: lib.rs
inteldfp-sys/: Cargo.toml  README.md  build.rs
inteldfp-sys/src/: lib.rs
