[package]
name = "decimalfp_macros_support"
description = "proc macros used in the implementation of decimalfp"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
allow_overflowing_literals = []

[dependencies]
inteldfp-sys = { version = "0.1.0", path = "../inteldfp-sys", default-features = false }
quote = "1.0.23"
